Node ID changed to long